force-app/main/default/objects/Drawdown__c/fields/Conga_Payment_Summary_Report_Print_All_2__c.field-meta.xml
<CustomField>
    <fullName>Conga_Payment_Summary_Report_Print_All_2__c</fullName>
    <formula>&quot;[payoutsps]a0p0L00000J8lTz%3F&quot;&amp;
&quot;pv0%3D&quot;&amp; Conga_Payment_Summary_Rpt_Start_Date__c&amp;
&quot;~pv1%3D&quot;&amp; Conga_Payment_Summary_Rpt_End_Date__c&amp;
&quot;~pv2%3D&quot;&amp; IF($Setup.Payment_Summary_Report__c.Business_Unit__c == &#39;Consolidated&#39;,&#39;Rhino&#39;,$Setup.Payment_Summary_Report__c.Business_Unit__c) &amp;&quot;,&quot;&amp;



&quot;[otherpaymentsps]a0p0L00000J8lU1%3F&quot;&amp;
&quot;pv0%3D&quot;&amp; Conga_Payment_Summary_Rpt_Start_Date__c&amp;
&quot;~pv1%3D&quot;&amp; Conga_Payment_Summary_Rpt_End_Date__c&amp;
&quot;~pv2%3D&quot;&amp; IF($Setup.Payment_Summary_Report__c.Business_Unit__c == &#39;Consolidated&#39;,&#39;Rhino&#39;,$Setup.Payment_Summary_Report__c.Business_Unit__c) &amp;&quot;,&quot;&amp;



&quot;[adminfeeps]a0p0L00000J8lUF%3F&quot;&amp;
&quot;pv0%3D&quot;&amp; Conga_Payment_Summary_Rpt_Start_Date__c&amp;
&quot;~pv1%3D&quot;&amp; Conga_Payment_Summary_Rpt_End_Date__c&amp;
&quot;~pv2%3D&quot;&amp; IF($Setup.Payment_Summary_Report__c.Business_Unit__c == &#39;Consolidated&#39;,&#39;Rhino&#39;,$Setup.Payment_Summary_Report__c.Business_Unit__c) &amp;&quot;,&quot;</formula>
    <label>Conga Payment Summary Report Print All 2</label>
    <type>Text</type>
</CustomField>