force-app/main/default/objects/Drawdown__c/fields/Conga_Payment_Summary_Report_Print_All_4__c.field-meta.xml
<CustomField>
    <fullName>Conga_Payment_Summary_Report_Print_All_4__c</fullName>
    <formula>&quot;[outstandingpsELFI]a0p0L00000J8lU9%3F&quot;&amp; 
&quot;pv0%3D&quot;&amp; Conga_Payment_Summary_Rpt_Start_Date__c&amp; 
&quot;~pv1%3D&quot;&amp; Conga_Payment_Summary_Rpt_End_Date__c&amp; 
&quot;~pv2%3D&quot;&amp; IF($Setup.Payment_Summary_Report__c.Business_Unit__c == &#39;Consolidated&#39;,&#39;ELFI&#39;,&#39;xxx&#39;) &amp;&quot;,&quot;&amp; 


&quot;[principalpaidpsELFI]a0p0L00000J8lU0%3F&quot;&amp; 
&quot;pv0%3D&quot;&amp; Conga_Payment_Summary_Rpt_Start_Date__c&amp; 
&quot;~pv1%3D&quot;&amp;Conga_Payment_Summary_Rpt_End_Date__c&amp; 
&quot;~pv2%3D&quot;&amp; IF($Setup.Payment_Summary_Report__c.Business_Unit__c == &#39;Consolidated&#39;,&#39;ELFI&#39;,&#39;xxx&#39;) &amp;&quot;,&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Payment Summary Report Print All 4</label>
    <type>Text</type>
</CustomField>