force-app/main/default/objects/Drawdown__c/fields/Date_Fits_To_Portfolio_Report__c.field-meta.xml
<CustomField>
    <fullName>Date_Fits_To_Portfolio_Report__c</fullName>
    <formula>AND(Date__c &gt;= Reporting_From_Date__c,Date__c &lt;= Reporting_To_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Fits To Portfolio Report</label>
    <type>Checkbox</type>
</CustomField>