force-app/main/default/objects/Drawdown__c/fields/Date_Matches_First_Advance__c.field-meta.xml
<CustomField>
    <fullName>Date_Matches_First_Advance__c</fullName>
    <formula>Date__c = Opportunity__r.Date_of_advance__c</formula>
    <label>Date Matches First Advance</label>
    <type>Checkbox</type>
</CustomField>