force-app/main/default/objects/Drawdown__c/fields/Date_of_Last_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Repayment__c</fullName>
    <inlineHelpText>Date of last repayment applied to this Drawdown.   This field is a roll up summary (DLRS) of the Payment Allocations and should not be updated directly.</inlineHelpText>
    <label>Date of Last Repayment</label>
    <type>Date</type>
</CustomField>