force-app/main/default/objects/Drawdown__c/fields/Date_of_Last_Repayment_b4_Temp_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Repayment_b4_Temp_Date__c</fullName>
    <inlineHelpText>Date of last repayment applied to this Drawdown before the the Temp date.   This field is a roll-up summary (DLRS) and should not be directly updated.</inlineHelpText>
    <label>Date of Last Repayment b4 Temp Date</label>
    <type>Date</type>
</CustomField>