force-app/main/default/objects/Drawdown__c/fields/Drawdown_Amount__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Amount__c</fullName>
    <formula>IF(OR(ISPICKVAL(Payment_Method__c,&#39;e-Transfer&#39;),ISPICKVAL(Payment_Method__c,&#39;Cheque&#39;)), Total_Amount__c,IF(ISPICKVAL(Payment_Method__c,&#39;Admin Fee&#39;),0,(0-Principal_Repaid__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawdown Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>