force-app/main/default/objects/Drawdown__c/fields/Drop_Down_No__c.field-meta.xml
<CustomField>
    <fullName>Drop_Down_No__c</fullName>
    <label>Drop Down No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>