force-app/main/default/objects/Drawdown__c/fields/Formula_Amount__c.field-meta.xml
<CustomField>
    <fullName>Formula_Amount__c</fullName>
    <formula>IF( 
  OR(
    ISPICKVAL(Reference_Notes__c, &#39;Payment Surplus&#39;) , 
    ISPICKVAL(Reference_Notes__c, &#39;Partial Payment&#39;) , 
    ISPICKVAL(Reference_Notes__c, &#39;Loan Payout&#39;) , 
    ISPICKVAL(Reference_Notes__c, &#39;Miscellaneous Payment&#39;),
    ISPICKVAL(Reference_Notes__c, &#39;Payment Shortfall&#39;),
    ISPICKVAL(Reference_Notes__c, &#39;Bad Debt&#39;),
    ISPICKVAL(Reference_Notes__c, &#39;Payment Rejected&#39;),
    ISPICKVAL(Reference_Notes__c, &#39;Payment Halted&#39;)
  ), ( Total_Amount__c * -1) , Total_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>