force-app/main/default/objects/Drawdown__c/fields/Include_Principal_In_Portfolio_Reports__c.field-meta.xml
<CustomField>
    <fullName>Include_Principal_In_Portfolio_Reports__c</fullName>
    <formula>OR(Accrued_Interest_In_Reporting_Period__c &gt;= 0, Outstanding_Balance_as_of_To_Date__c  &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include Principal In Portfolio Reports</label>
    <type>Checkbox</type>
</CustomField>