force-app/main/default/objects/Drawdown__c/fields/Interest_Accrual_Days__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrual_Days__c</fullName>
    <formula>(IF((Interest_End_Date__c-Interest_Start_Date__c)&lt;=0,0,(Interest_End_Date__c-Interest_Start_Date__c)+1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between Interest Start and End on which interest accrues.  This has been adjusted for prior payments, minimum interest duration, and deferred interest.</inlineHelpText>
    <label>Interest Accrual (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>