force-app/main/default/objects/Drawdown__c/fields/Interest_Accrual_Years_Pymt_to_Temp_Dt__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrual_Years_Pymt_to_Temp_Dt__c</fullName>
    <formula>Interest_Accrual_Days_Pymt_to_Temp_Dt__c/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fraction of a year(s) on which interest is based. Calculation is based on a 365 day year and will therefore be slightly low for leap years (field is calculated from Interest Accrual (Days) / 365).</inlineHelpText>
    <label>Interest Accrual (Years) Pymt to Temp Dt</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>