force-app/main/default/objects/Drawdown__c/fields/Interest_End_Date_at_Last_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Interest_End_Date_at_Last_Repayment__c</fullName>
    <inlineHelpText>The date the interest had accrued to when last payment was recorded.    As this is a DLRS roll up summary, do no update directly.  Instead, update Payments.</inlineHelpText>
    <label>Interest End Date at Last Repayment</label>
    <type>Date</type>
</CustomField>