force-app/main/default/objects/Drawdown__c/fields/Interest_End_Date_Temp_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_End_Date_Temp_Date__c</fullName>
    <formula>IF(Temp_Payout_Date__c=Date__c,Temp_Payout_Date__c,
IF( Temp_Payout_Date__c &gt;Date__c + 30*Minimum_Interest_Period__c - 1,Temp_Payout_Date__c,Date__c + 30*Minimum_Interest_Period__c - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date Interest will be calculated TO. Date is adjusted for minimum interest period.</inlineHelpText>
    <label>Interest End Date - Temp Date</label>
    <type>Date</type>
</CustomField>