force-app/main/default/objects/Drawdown__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>The interest rate pulled down from the Opportunity.  Duplicated here to allow formulas to access without exceeding limits.</description>
    <inlineHelpText>Loan Interest Rate</inlineHelpText>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>