force-app/main/default/objects/Drawdown__c/fields/Interest_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Start_Date__c</fullName>
    <description>NOTE: Adding one to the repayment date so we don&#39;t double count interest on the date of repayment.</description>
    <formula>IF(not(isblank(Date_of_Last_Repayment__c)), Interest_End_Date_at_Last_Repayment__c + 1,
 IF(Interest_Deferral_Period__c&gt;0, ADDMONTHS(Date__c,Interest_Deferral_Period__c),
    Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start date of interest accrual adjusted for the minimum interest period and for interest already accounted for in prior periods.</inlineHelpText>
    <label>Interest Start Date</label>
    <type>Date</type>
</CustomField>