force-app/main/default/objects/Drawdown__c/fields/Interest_up_to_Last_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Interest_up_to_Last_Repayment__c</fullName>
    <inlineHelpText>Sum of all Interest Accrued up to the point of last repayment.   Used to calculate Outstanding Balance as Interest Accrued before Payment cannot be re-calculated dynamically.   This is a roll-up summary field (DLRS) and should not be updated directly.</inlineHelpText>
    <label>Interest up to Last Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>