force-app/main/default/objects/Drawdown__c/fields/Is_Admin_Fee_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Is_Admin_Fee_Rejection__c</fullName>
    <formula>OR(ISPICKVAL(Payment_To_Reverse__r.Reference_Notes__c, &#39;Admin Fee&#39;),
ISPICKVAL(Payment_To_Reverse__r.Reference_Notes__c, &#39;Assessment Fee&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Admin Fee Rejection</label>
    <type>Checkbox</type>
</CustomField>