force-app/main/default/objects/Drawdown__c/fields/Minimum_Interest_Period__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Interest_Period__c</fullName>
    <description>The minimum Interest period from the Opportunity.   Replicated here to avoid exceeding cross object formula limitations.</description>
    <inlineHelpText>The number of months of interest which must be charged at a minimum.</inlineHelpText>
    <label>Minimum Interest Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>