force-app/main/default/objects/Drawdown__c/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>Name</formula>
    <label>Name Formula</label>
    <type>Text</type>
</CustomField>