force-app/main/default/objects/Drawdown__c/fields/Non_Allocated_Payment__c.field-meta.xml
<CustomField>
    <fullName>Non_Allocated_Payment__c</fullName>
    <formula>Amount__c -  Sum_of_Payment_Allocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Allocated Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>