force-app/main/default/objects/Drawdown__c/fields/Opportunity_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Display_Name__c</fullName>
    <description>Needed a non hyperlinked form so it exported cleanly inreports</description>
    <formula>Opportunity__r.Name &amp;&quot; - &quot;&amp; TEXT(Opportunity__r.Loan_Requests__c) &amp; &quot; - &quot;&amp; TEXT(Opportunity__r.Loan_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity Name</inlineHelpText>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>