force-app/main/default/objects/Drawdown__c/fields/Opportunity_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Service_Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Service Provider</label>
    <referenceTo>Opportunity_Service_Provider__c</referenceTo>
    <relationshipLabel>Drawdowns</relationshipLabel>
    <relationshipName>Drawdowns</relationshipName>
    <type>Lookup</type>
</CustomField>