force-app/main/default/objects/Drawdown__c/fields/Opportunity_Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_Status__c</fullName>
    <formula>TEXT(Opportunity__r.Stage_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage Status</label>
    <type>Text</type>
</CustomField>