force-app/main/default/objects/Drawdown__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <formula>If (NOT(IsPickVal(Opportunity__r.StageName,&#39;Closed With Loan&#39;)),&#39;Inactive&#39;,
     If (ISBLANK(TEXT(Opportunity__r.Stage_Status__c)),&#39;Active&#39;,
         If (IsPickVal(Opportunity__r.Stage_Status__c,&#39;Partial Payment&#39;),&#39;Partial Payment&#39;,
             If (IsPickVal(Opportunity__r.Stage_Status__c,&#39;Payments Halted&#39;),&#39;Payments Halted&#39;,&#39;Inactive&#39;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity states summarizing those still accruing interest.   Used for ELFI 2 report.</inlineHelpText>
    <label>Opportunity Status</label>
    <type>Text</type>
</CustomField>