force-app/main/default/objects/Drawdown__c/fields/Outstanding_Balance_as_of_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_as_of_From_Date__c</fullName>
    <inlineHelpText>Outstanding balance on the From date</inlineHelpText>
    <label>Outstanding Balance as of From Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>